src/Pages/Aboutpage/About.css
.background {
  background-color: #fdfdfd;
}

.page--about {
  min-height: calc(100vh - 124px);

  background-color: #fdfdfd;

  margin: 0 auto;
  padding: 50px 25px;

  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;

  --flow-space: 1em;
}

.page--about--example {
  background-color: #fff7e9;
}

.subtitle--about {
  font-size: calc(44px + (44 - 28) * ((100vw - 640px) / (1280 - 640)));
  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px) / (1600 - 300)));
  margin-bottom: 0px;
}

.about__content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  flex: 1 0 400px;
  width: 100%;
  justify-content: center;
  max-height: fit-content;
  max-width: fit-content;
}

.column {
  display: flex;
  flex-direction: column;
  flex: 50%;
  position: relative;
}

.abouttext {
  max-width: 400px;
  --flow-space: 1em;
}

.about_content {
  justify-content: center;
  align-self: center;
  position: relative;
}

.box_outside {
  justify-content: center;
  border-style: solid;
  border-width: medium;
  border-color: #ffc259;
  align-self: center;

  margin: 10px;
  margin-bottom: 30px;

  padding: 15px;
  padding-top: 10px;
  max-width: 300px;
}

.box_content {
  padding: 2%;
  --flow-space: 1em;
}

.box_title {
  font-size: calc(24px + (28 - 24) * ((100vw - 640px) / (1280 - 640)));
  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px) / (1600 - 300)));
  padding-bottom: 5px;
  color: #ffc259;
  text-transform: uppercase;
  border-bottom: 1px solid;
  text-align: start;
  font-weight: bold;
}
.box_sub_title {
  font-size: 18px;
  color: #ffc259;
  text-transform: uppercase;
  text-align: left;
  margin-top: 2%;
}

.contactinfo__email a:hover,
.contactinfo__email a:focus,
.contactinfo__number a:hover,
.contactinfo__number a:focus {
  text-decoration: underline;
}

.example_back {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: center;
  width: 100%;
  padding: 25px 15px;

  --flow-space: 1em;
}

.header__title--sample {
  width: 100%;
  text-align: left;
  font-size: calc(32px + (40 - 32) * ((100vw - 640px) / (1280 - 640)));
  line-height: calc(1.3em + (1.5 - 1.3) * ((100vw - 300px) / (1600 - 300)));
}

.imageCrop {
  max-height: 490px;
  overflow: hidden;
}

.audioPlayer {
  display: flex;
  align-items: center;
  flex-direction: column;
  max-width: 400px;
  background-color: #fdfdfd;
  margin: 10px;
  padding: 15px;
  padding-top: 15px;
  border: 1px solid black;
  scroll-snap-align: center;
}

.audioControls,
.audioControls audio {
  width: 100%;
}

audio::-webkit-media-controls-panel {
  background-color: #fdfdfd;
}

.sub_title {
  text-align: center;
  font-size: 40px;
  font-weight: bold;
}

@media (min-width: 640px) {
  .page--about {
    max-width: 100%;
    height: 100%;

    --flow-space: 3em;
  }
}

@media (min-width: 768px) {
  .box_outside {
    margin-bottom: 0px;
    margin-right: 50px;
  }
}

